--- a/index.html
+++ b/index.html
@@ -106,17 +106,13 @@
     <div class="header-top">
         <div>
             <h1>Your Name</h1>
-            <p>Product Manager | Book Lover | Health Enthusiast</p>
         </div>
-        <button class="theme-toggle" id="theme-toggle" type="button" aria-pressed="false">
-            Switch to dark mode
-        </button>
     </div>
     <nav>
         <a href="#about">About</a>
-        <a href="#product">Product Management</a>
-        <a href="#books">Books</a>
-        <a href="#health">Health</a>
+        <a href="#product">Books</a>
+        <a href="#books">Health</a>
+        <a href="#health">Blog</a>
         <a href="#connect">Connect</a>
     </nav>
 </header>
@@ -149,7 +145,7 @@
 </main>
 
 <footer>
-    &copy; 2026 Your Name. All rights reserved.
+    &copy; 2026 Konstantin Goryagin. All rights reserved.
 </footer>
 
 <script>
