--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     </div>
     <nav>
         <a href="#about">About</a>
-        <a href="#product">Books</a>
-        <a href="#books">Health</a>
-        <a href="#health">Blog</a>
+        <a href="#books">Books</a>
+        <a href="#health">Health</a>
+        <a href="#blog">Blog</a>
         <a href="#connect">Connect</a>
     </nav>
 </header>
@@ -121,11 +121,6 @@
     <section id="about">
         <h2>About Me</h2>
         <p>Write a short introduction about yourself here. Mention your background, your interests, and what you're currently working on.</p>
-    </section>
-
-    <section id="product">
-        <h2>Product Management</h2>
-        <p>Highlight your experience, philosophy, or key achievements in product management. Mention tools you use and what kind of problems you solve.</p>
     </section>
 
     <section id="books">
@@ -138,6 +133,11 @@
         <p>Share your approach to staying healthy, fitness routines, mental health tips, or anything you value related to wellness.</p>
     </section>
 
+    <section id="blog">
+        <h2>Blog</h2>
+        <p>Space for random thoughts and interesting ideas.</p>
+    </section>
+    
     <section id="connect">
         <h2>Connect</h2>
         <p>Let people know how they can reach out to you. Include links to your LinkedIn, email, or other social media.</p>
