--- a/index.html
+++ b/index.html
@@ -5,173 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Personal CV website for GitHub Pages.">
     <title>My Personal CV</title>
-    <style>
-        :root {
-            color-scheme: light dark;
-            --page-bg: #f9f9f9;
-            --text-color: #333;
-            --header-bg: #fff;
-            --card-bg: #fff;
-            --accent: #007acc;
-            --border: #eee;
-            --shadow: rgba(0, 0, 0, 0.05);
-            --toggle-bg: #f0f2f5;
-        }
-
-        [data-theme="dark"] {
-            --page-bg: #121417;
-            --text-color: #e6e8eb;
-            --header-bg: #1b1f24;
-            --card-bg: #1f242a;
-            --accent: #6cb6ff;
-            --border: #2c3238;
-            --shadow: rgba(0, 0, 0, 0.4);
-            --toggle-bg: #2b3138;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            line-height: 1.6;
-            background-color: var(--page-bg);
-            color: var(--text-color);
-            transition: background-color 0.3s ease, color 0.3s ease;
-        }
-        header {
-            background: var(--header-bg);
-            padding: 2rem;
-            text-align: center;
-            border-bottom: 1px solid var(--border);
-            box-shadow: 0 2px 6px var(--shadow);
-        }
-        .header-top {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            align-items: center;
-        }
-        nav {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1rem;
-            margin-bottom: 2rem;
-        }
-        nav a {
-            text-decoration: none;
-            color: var(--accent);
-            font-weight: bold;
-        }
-        main {
-            padding-bottom: 2rem;
-        }
-        section {
-            max-width: 800px;
-            margin: auto;
-            padding: 2rem;
-            background: var(--card-bg);
-            margin-bottom: 1rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px var(--shadow);
-            border: 1px solid var(--border);
-        }
-        h2 {
-            color: var(--accent);
-        }
-        .theme-toggle {
-            border: 1px solid var(--border);
-            background: var(--toggle-bg);
-            color: var(--text-color);
-            padding: 0.6rem 1.2rem;
-            border-radius: 999px;
-            cursor: pointer;
-            font-weight: 600;
-            transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
-        }
-        .theme-toggle:focus-visible {
-            outline: 3px solid var(--accent);
-            outline-offset: 3px;
-        }
-        footer {
-            text-align: center;
-            padding: 2rem;
-            font-size: 0.9rem;
-            color: var(--text-color);
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-    <div class="header-top">
-        <div>
+    <div class="header-inner">
+        <div class="header-title">
             <h1>Your Name</h1>
+            <p>Modern CV & insights on books, wellness, and personal growth.</p>
         </div>
+        <nav>
+            <a href="index.html" aria-current="page">Home</a>
+            <a href="about.html">About</a>
+            <a href="books.html">Books</a>
+            <a href="health.html">Health</a>
+            <a href="blog.html">Blog</a>
+            <a href="connect.html">Connect</a>
+        </nav>
     </div>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#books">Books</a>
-        <a href="#health">Health</a>
-        <a href="#blog">Blog</a>
-        <a href="#connect">Connect</a>
-    </nav>
 </header>
 
 <main>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Write a short introduction about yourself here. Mention your background, your interests, and what you're currently working on.</p>
+    <section class="hero">
+        <div class="hero-card">
+            <h2>Welcome to my personal space</h2>
+            <p>Explore focused pages that highlight my background, reading list, wellness routines, and the ideas I share.</p>
+        </div>
+        <div class="hero-card">
+            <h2>Let’s stay in touch</h2>
+            <p>Each section is now its own page so you can dive into the details that matter most to you.</p>
+        </div>
     </section>
 
-    <section id="books">
-        <h2>Books</h2>
-        <p>Talk about books you're reading, your favorites, or even book reviews or recommendations you offer.</p>
-    </section>
-
-    <section id="health">
-        <h2>Health</h2>
-        <p>Share your approach to staying healthy, fitness routines, mental health tips, or anything you value related to wellness.</p>
-    </section>
-
-    <section id="blog">
-        <h2>Blog</h2>
-        <p>Space for random thoughts and interesting ideas.</p>
-    </section>
-    
-    <section id="connect">
-        <h2>Connect</h2>
-        <p>Let people know how they can reach out to you. Include links to your LinkedIn, email, or other social media.</p>
+    <section class="section-grid">
+        <article class="section-card">
+            <h3>About</h3>
+            <p>Get a quick overview of my background, interests, and current focus.</p>
+            <a href="about.html">Visit About →</a>
+        </article>
+        <article class="section-card">
+            <h3>Books</h3>
+            <p>Discover what I am reading and the ideas inspiring my work.</p>
+            <a href="books.html">Visit Books →</a>
+        </article>
+        <article class="section-card">
+            <h3>Health</h3>
+            <p>See the habits and routines that keep me energized.</p>
+            <a href="health.html">Visit Health →</a>
+        </article>
+        <article class="section-card">
+            <h3>Blog</h3>
+            <p>Short reflections, notes, and experiments.</p>
+            <a href="blog.html">Visit Blog →</a>
+        </article>
+        <article class="section-card">
+            <h3>Connect</h3>
+            <p>Reach out for collaborations, coffee chats, or friendly hellos.</p>
+            <a href="connect.html">Visit Connect →</a>
+        </article>
     </section>
 </main>
 
 <footer>
     &copy; 2026 Konstantin Goryagin. All rights reserved.
 </footer>
-
-<script>
-    const toggleButton = document.getElementById('theme-toggle');
-    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    const savedTheme = localStorage.getItem('theme');
-    const initialTheme = savedTheme || (prefersDark ? 'dark' : 'light');
-
-    document.documentElement.setAttribute('data-theme', initialTheme);
-    toggleButton.setAttribute('aria-pressed', initialTheme === 'dark');
-    toggleButton.textContent = initialTheme === 'dark'
-        ? 'Switch to light mode'
-        : 'Switch to dark mode';
-
-    toggleButton.addEventListener('click', () => {
-        const currentTheme = document.documentElement.getAttribute('data-theme');
-        const nextTheme = currentTheme === 'dark' ? 'light' : 'dark';
-
-        document.documentElement.setAttribute('data-theme', nextTheme);
-        localStorage.setItem('theme', nextTheme);
-        toggleButton.setAttribute('aria-pressed', nextTheme === 'dark');
-        toggleButton.textContent = nextTheme === 'dark'
-            ? 'Switch to light mode'
-            : 'Switch to dark mode';
-    });
-</script>
 
 </body>
 </html>
