--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Personal CV website for GitHub Pages.">
+    <meta name="description" content="Konstantin Goryagin personal website">
     <title>My Personal CV</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +15,7 @@
 <header>
     <div class="header-inner">
         <div class="header-title">
-            <h1>Your Name</h1>
-            <p>Modern CV & insights on books, wellness, and personal growth.</p>
+            <h1>Konstantin Goryagin</h1>
         </div>
         <nav>
             <a href="index.html" aria-current="page">Home</a>
@@ -34,10 +33,6 @@
         <div class="hero-card">
             <h2>Welcome to my personal space</h2>
             <p>Explore focused pages that highlight my background, reading list, wellness routines, and the ideas I share.</p>
-        </div>
-        <div class="hero-card">
-            <h2>Let’s stay in touch</h2>
-            <p>Each section is now its own page so you can dive into the details that matter most to you.</p>
         </div>
     </section>
 
