--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="hero">
         <div class="hero-card">
             <h2>Welcome to my personal space</h2>
-            <p>Explore focused pages that highlight my background, reading list, wellness routines, and the ideas I share.</p>
+            <p>Explore with me, read, get healthy, and check the ideas I share.</p>
         </div>
     </section>
 
