--- a/connect.html
+++ b/connect.html
@@ -33,6 +33,9 @@
     <section class="content-panel connect-panel">
         <h2>Connect</h2>
         <p>Reach out with a note, book a call, or connect with me on LinkedIn.</p>
+    </section>
+    
+    <section class="content-panel connect-panel">
         <div class="connect-grid">
             <form class="connect-card contact-form">
                 <h3>Send a message</h3>
@@ -50,18 +53,20 @@
                 </label>
                 <button type="submit" class="button-primary">Send message</button>
             </form>
+        </div>
+    </section>
+
+    <section class="content-panel connect-panel">
             <div class="connect-card connect-actions">
-                <h3>Quick ways to connect</h3>
-                <p>Prefer a live conversation? Grab a time that works best for you.</p>
-                <a class="button-primary" href="https://calendly.com/" target="_blank" rel="noopener">Book a call</a>
-                <a class="social-link" href="https://www.linkedin.com" target="_blank" rel="noopener">
-                    <span class="social-icon" aria-hidden="true">
-                        <svg viewBox="0 0 24 24" role="img" aria-hidden="true">
-                            <path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.48 1 4.98 2.12 4.98 3.5ZM0.5 8.25H4.5V23H0.5V8.25ZM8.25 8.25H12.08V10.26H12.14C12.72 9.19 14.13 8.06 16.24 8.06C20.42 8.06 21.5 10.78 21.5 14.37V23H17.5V15.2C17.5 13.33 17.47 10.94 14.87 10.94C12.23 10.94 11.83 12.98 11.83 15.07V23H7.83V8.25H8.25Z"></path>
-                        </svg>
-                    </span>
-                    Connect on LinkedIn
-                </a>
+                <h3>Prefer a live conversation? Grab a time that works best for you.</h3>
+                <a class="button-primary" href="https://calendar.app.google/ih252AStM5qG3P7A7" target="_blank" rel="noopener">Book a call</a>
+            </div>        
+    </section>
+
+    <section class="content-panel connect-panel">
+            <div class="connect-card connect-actions">
+                <h3>Prefer LinkedIn?</h3>
+                <a class="social-link" href="linkedin.com/in/konstantin-goryagin" target="_blank" rel="noopener">Connect on LinkedIn</a>
             </div>
         </div>
     </section>
