--- a/connect.html
+++ b/connect.html
@@ -39,35 +39,31 @@
         <div class="connect-grid">
             <form class="connect-card contact-form">
                 <h3>Send a message</h3>
-                <label>
-                    Full name
+                <label>                    
                     <input type="text" name="name" placeholder="Your name" required>
                 </label>
-                <label>
-                    Email address
-                    <input type="email" name="email" placeholder="you@example.com" required>
+                <label>                    
+                    <input type="email" name="email" placeholder="Your email address" required>
                 </label>
-                <label>
-                    Message
-                    <textarea name="message" rows="5" placeholder="Tell me what you'd like to discuss." required></textarea>
+                <label>                    
+                    <textarea name="message" rows="5" placeholder="Your message" required></textarea>
                 </label>
-                <button type="submit" class="button-primary">Send message</button>
+                <button type="submit" class="button-primary" href="mailto:konstantin@kongor.co">Send message</button>
             </form>
         </div>
     </section>
 
     <section class="content-panel connect-panel">
-            <div class="connect-card connect-actions">
-                <h3>Prefer a live conversation? Grab a time that works best for you.</h3>
-                <a class="button-primary" href="https://calendar.app.google/ih252AStM5qG3P7A7" target="_blank" rel="noopener">Book a call</a>
-            </div>        
+        <div class="connect-card connect-actions">
+            <h3>Prefer a live conversation? Grab a time that works best for you.</h3>
+            <a class="button-primary" href="https://calendar.app.google/ih252AStM5qG3P7A7" target="_blank" rel="noopener">Book a call</a>
+        </div>        
     </section>
 
     <section class="content-panel connect-panel">
-            <div class="connect-card connect-actions">
-                <h3>Prefer LinkedIn?</h3>
-                <a class="social-link" href="linkedin.com/in/konstantin-goryagin" target="_blank" rel="noopener">Connect on LinkedIn</a>
-            </div>
+        <div class="connect-card connect-actions">
+            <h3>Prefer LinkedIn?</h3>
+            <a class="button-primary" href="linkedin.com/in/konstantin-goryagin" target="_blank" rel="noopener">Connect on LinkedIn</a>
         </div>
     </section>
 </main>
