--- a/connect.html
+++ b/connect.html
@@ -63,7 +63,7 @@
     <section class="content-panel connect-panel">
         <div class="connect-card connect-actions">
             <h3>Prefer LinkedIn?</h3>
-            <a class="button-primary" href="linkedin.com/in/konstantin-goryagin" target="_blank" rel="noopener">Connect on LinkedIn</a>
+            <a class="button-primary" href="https://www.linkedin.com/in/konstantin-goryagin/" target="_blank" rel="noopener">Connect on LinkedIn</a>
         </div>
     </section>
 </main>
