--- a/connect.html
+++ b/connect.html
@@ -15,8 +15,7 @@
 <header>
     <div class="header-inner">
         <div class="header-title">
-            <h1>Your Name</h1>
-            <p>Modern CV & insights on books, wellness, and personal growth.</p>
+            <h1>Konstantin Goryagin</h1>
         </div>
         <nav>
             <a href="index.html">Home</a>
@@ -32,7 +31,7 @@
 <main>
     <section class="content-panel connect-panel">
         <h2>Connect</h2>
-        <p>Reach out with a note, book a call, or connect with me on LinkedIn.</p>
+        <p>Reach out with a message, book a call, or connect on LinkedIn.</p>
     </section>
     
     <section class="content-panel connect-panel">
