Update connect form layout and behavior

--- a/connect.html
+++ b/connect.html
@@ -36,7 +36,7 @@
     
     <section class="content-panel connect-panel">
         <div class="connect-grid">
-            <form class="connect-card contact-form">
+            <form class="connect-card contact-form" action="mailto:konstantin@kongor.co" method="post" enctype="text/plain">
                 <h3>Send a message</h3>
                 <label>                    
                     <input type="text" name="name" placeholder="Your name" required>
@@ -47,7 +47,7 @@
                 <label>                    
                     <textarea name="message" rows="5" placeholder="Your message" required></textarea>
                 </label>
-                <button type="submit" class="button-primary" href="mailto:konstantin@kongor.co">Send message</button>
+                <button type="submit" class="button-primary">Send message</button>
             </form>
         </div>
     </section>
