Remove .html from site navigation URLs

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <h1>Konstantin Goryagin</h1>
         </div>
         <nav>
-            <a href="index.html" aria-current="page">Home</a>
-            <a href="about.html">About</a>
-            <a href="books.html">Books</a>
-            <a href="health.html">Health</a>
-            <a href="blog.html">Blog</a>
-            <a href="connect.html">Connect</a>
+            <a href="index" aria-current="page">Home</a>
+            <a href="about">About</a>
+            <a href="books">Books</a>
+            <a href="health">Health</a>
+            <a href="blog">Blog</a>
+            <a href="connect">Connect</a>
         </nav>
     </div>
 </header>
@@ -40,27 +40,27 @@
         <article class="section-card">
             <h3>About</h3>
             <p>Get a quick overview of my background, interests, and current focus.</p>
-            <a href="about.html">Visit About →</a>
+            <a href="about">Visit About →</a>
         </article>
         <article class="section-card">
             <h3>Books</h3>
             <p>Discover what I am reading and the ideas inspiring my work.</p>
-            <a href="books.html">Visit Books →</a>
+            <a href="books">Visit Books →</a>
         </article>
         <article class="section-card">
             <h3>Health</h3>
             <p>See the habits and routines that keep me energized.</p>
-            <a href="health.html">Visit Health →</a>
+            <a href="health">Visit Health →</a>
         </article>
         <article class="section-card">
             <h3>Blog</h3>
             <p>Short reflections, notes, and experiments.</p>
-            <a href="blog.html">Visit Blog →</a>
+            <a href="blog">Visit Blog →</a>
         </article>
         <article class="section-card">
             <h3>Connect</h3>
             <p>Reach out for collaborations, coffee chats, or friendly hellos.</p>
-            <a href="connect.html">Visit Connect →</a>
+            <a href="connect">Visit Connect →</a>
         </article>
     </section>
 </main>
