--- a/blog.html
+++ b/blog.html
@@ -19,12 +19,12 @@
             <p>Modern CV & insights on books, wellness, and personal growth.</p>
         </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="books.html">Books</a>
-            <a href="health.html">Health</a>
-            <a href="blog.html" aria-current="page">Blog</a>
-            <a href="connect.html">Connect</a>
+            <a href="index">Home</a>
+            <a href="about">About</a>
+            <a href="books">Books</a>
+            <a href="health">Health</a>
+            <a href="blog" aria-current="page">Blog</a>
+            <a href="connect">Connect</a>
         </nav>
     </div>
 </header>
