--- a/connect.html
+++ b/connect.html
@@ -18,12 +18,12 @@
             <h1>Konstantin Goryagin</h1>
         </div>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="books.html">Books</a>
-            <a href="health.html">Health</a>
-            <a href="blog.html">Blog</a>
-            <a href="connect.html" aria-current="page">Connect</a>
+            <a href="index">Home</a>
+            <a href="about">About</a>
+            <a href="books">Books</a>
+            <a href="health">Health</a>
+            <a href="blog">Blog</a>
+            <a href="connect" aria-current="page">Connect</a>
         </nav>
     </div>
 </header>
