Refactor shared site header

--- a/index.html
+++ b/index.html
@@ -9,24 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="header.js" defer></script>
 </head>
 <body>
 
-<header>
-    <div class="header-inner">
-        <div class="header-title">
-            <h1>Konstantin Goryagin</h1>
-        </div>
-        <nav>
-            <a href="index" aria-current="page">Home</a>
-            <a href="about">About</a>
-            <a href="books">Books</a>
-            <a href="health">Health</a>
-            <a href="blog">Blog</a>
-            <a href="connect">Connect</a>
-        </nav>
-    </div>
-</header>
+<header data-site-header></header>
 
 <main>
     <section class="hero">
