Add book review layout with uploads

--- a/books.html
+++ b/books.html
@@ -18,11 +18,88 @@
 <main>
     <section class="content-panel">
         <h2>Books</h2>
-        <p>Talk about books you're reading, your favorites, or even book reviews or recommendations you offer.</p>
-        <ul class="highlight-list">
-            <li>Currently reading: add the book title and a one-line takeaway.</li>
-            <li>Recent favorites: list three books that shaped your thinking.</li>
-            <li>Reading goal: share your yearly target or upcoming list.</li>
+        <p>Add your notes, upload photos, and keep a running log of every book you've finished.</p>
+        <ul class="books-list">
+            <li class="book-row">
+                <div class="book-photo">
+                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+1" alt="Placeholder cover for Book One">
+                    <label class="upload-field">
+                        Upload photo
+                        <input type="file" accept="image/*">
+                    </label>
+                </div>
+                <div class="book-review">
+                    <h3>Book One: The Horizon Tale</h3>
+                    <label class="review-field">
+                        Review
+                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."></textarea>
+                    </label>
+                </div>
+            </li>
+            <li class="book-row">
+                <div class="book-photo">
+                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+2" alt="Placeholder cover for Book Two">
+                    <label class="upload-field">
+                        Upload photo
+                        <input type="file" accept="image/*">
+                    </label>
+                </div>
+                <div class="book-review">
+                    <h3>Book Two: Notes on Stillness</h3>
+                    <label class="review-field">
+                        Review
+                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum."></textarea>
+                    </label>
+                </div>
+            </li>
+            <li class="book-row">
+                <div class="book-photo">
+                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+3" alt="Placeholder cover for Book Three">
+                    <label class="upload-field">
+                        Upload photo
+                        <input type="file" accept="image/*">
+                    </label>
+                </div>
+                <div class="book-review">
+                    <h3>Book Three: City of Echoes</h3>
+                    <label class="review-field">
+                        Review
+                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero."></textarea>
+                    </label>
+                </div>
+            </li>
+            <li class="book-row">
+                <div class="book-photo">
+                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+4" alt="Placeholder cover for Book Four">
+                    <label class="upload-field">
+                        Upload photo
+                        <input type="file" accept="image/*">
+                    </label>
+                </div>
+                <div class="book-review">
+                    <h3>Book Four: The Quiet Atlas</h3>
+                    <label class="review-field">
+                        Review
+                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet."></textarea>
+                    </label>
+                </div>
+            </li>
+            <li class="book-row">
+                <div class="book-photo">
+                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+5" alt="Placeholder cover for Book Five">
+                    <label class="upload-field">
+                        Upload photo
+                        <input type="file" accept="image/*">
+                    </label>
+                </div>
+                <div class="book-review">
+                    <h3>Book Five: Stories in Motion</h3>
+                    <label class="review-field">
+                        Review
+                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis ipsum. Praesent mauris."></textarea>
+                    </label>
+                </div>
+            </li>
         </ul>
     </section>
 </main>
