--- a/books.html
+++ b/books.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Books, recommendations, and reading notes.">
-    <title>Books · My Personal CV</title>
+    <title>Books · Konstantin Goryagin</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -18,84 +18,58 @@
 <main>
     <section class="content-panel">
         <h2>Books</h2>
-        <p>Add your notes, upload photos, and keep a running log of every book you've finished.</p>
         <ul class="books-list">
             <li class="book-row">
                 <div class="book-photo">
-                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+1" alt="Placeholder cover for Book One">
-                    <label class="upload-field">
-                        Upload photo
-                        <input type="file" accept="image/*">
-                    </label>
+                    <img src="https://img.freepik.com/free-photo/book-composition-with-open-book_23-2147690555.jpg" alt="Placeholder cover for Book One">
                 </div>
                 <div class="book-review">
-                    <h3>Book One: The Horizon Tale</h3>
-                    <label class="review-field">
-                        Review
+                    <h3>Book One</h3>
+                    <label class="review-field">                        
                         <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."></textarea>
                     </label>
                 </div>
             </li>
             <li class="book-row">
                 <div class="book-photo">
-                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+2" alt="Placeholder cover for Book Two">
-                    <label class="upload-field">
-                        Upload photo
-                        <input type="file" accept="image/*">
-                    </label>
+                    <img src="https://img.freepik.com/free-photo/book-composition-with-open-book_23-2147690555.jpg" alt="Placeholder cover for Book Two">
                 </div>
                 <div class="book-review">
-                    <h3>Book Two: Notes on Stillness</h3>
-                    <label class="review-field">
-                        Review
+                    <h3>Book Two</h3>
+                    <label class="review-field">                        
                         <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum."></textarea>
                     </label>
                 </div>
             </li>
             <li class="book-row">
                 <div class="book-photo">
-                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+3" alt="Placeholder cover for Book Three">
-                    <label class="upload-field">
-                        Upload photo
-                        <input type="file" accept="image/*">
-                    </label>
+                    <img src="https://img.freepik.com/free-photo/book-composition-with-open-book_23-2147690555.jpg" alt="Placeholder cover for Book Three">
                 </div>
                 <div class="book-review">
-                    <h3>Book Three: City of Echoes</h3>
+                    <h3>Book Three</h3>
                     <label class="review-field">
-                        Review
                         <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero."></textarea>
                     </label>
                 </div>
             </li>
             <li class="book-row">
                 <div class="book-photo">
-                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+4" alt="Placeholder cover for Book Four">
-                    <label class="upload-field">
-                        Upload photo
-                        <input type="file" accept="image/*">
-                    </label>
+                    <img src="https://img.freepik.com/free-photo/book-composition-with-open-book_23-2147690555.jpg" alt="Placeholder cover for Book Four">
                 </div>
                 <div class="book-review">
-                    <h3>Book Four: The Quiet Atlas</h3>
+                    <h3>Book Four</h3>
                     <label class="review-field">
-                        Review
                         <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet."></textarea>
                     </label>
                 </div>
             </li>
             <li class="book-row">
                 <div class="book-photo">
-                    <img src="https://via.placeholder.com/480x320?text=Book+Cover+5" alt="Placeholder cover for Book Five">
-                    <label class="upload-field">
-                        Upload photo
-                        <input type="file" accept="image/*">
-                    </label>
+                    <img src="https://img.freepik.com/free-photo/book-composition-with-open-book_23-2147690555.jpg" alt="Placeholder cover for Book Five">
                 </div>
                 <div class="book-review">
-                    <h3>Book Five: Stories in Motion</h3>
+                    <h3>Book Five</h3>
                     <label class="review-field">
-                        Review
                         <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis ipsum. Praesent mauris."></textarea>
                     </label>
                 </div>
