Update book review display

--- a/books.html
+++ b/books.html
@@ -25,9 +25,9 @@
                 </div>
                 <div class="book-review">
                     <h3>Book One</h3>
-                    <label class="review-field">                        
-                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."></textarea>
-                    </label>
+                    <div class="review-field">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </div>
                 </div>
             </li>
             <li class="book-row">
@@ -36,9 +36,9 @@
                 </div>
                 <div class="book-review">
                     <h3>Book Two</h3>
-                    <label class="review-field">                        
-                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum."></textarea>
-                    </label>
+                    <div class="review-field">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.
+                    </div>
                 </div>
             </li>
             <li class="book-row">
@@ -47,9 +47,9 @@
                 </div>
                 <div class="book-review">
                     <h3>Book Three</h3>
-                    <label class="review-field">
-                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero."></textarea>
-                    </label>
+                    <div class="review-field">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.
+                    </div>
                 </div>
             </li>
             <li class="book-row">
@@ -58,9 +58,9 @@
                 </div>
                 <div class="book-review">
                     <h3>Book Four</h3>
-                    <label class="review-field">
-                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet."></textarea>
-                    </label>
+                    <div class="review-field">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+                    </div>
                 </div>
             </li>
             <li class="book-row">
@@ -69,9 +69,9 @@
                 </div>
                 <div class="book-review">
                     <h3>Book Five</h3>
-                    <label class="review-field">
-                        <textarea placeholder="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis ipsum. Praesent mauris."></textarea>
-                    </label>
+                    <div class="review-field">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sagittis ipsum. Praesent mauris.
+                    </div>
                 </div>
             </li>
         </ul>
